--- a/dev/intro/options/preprocess.html
+++ b/dev/intro/options/preprocess.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - ReadStor</title>
-        <base href="/">
+        <title>Pre-process - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -13,33 +12,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="src/css/custom.css">
+        <link rel="stylesheet" href="../../src/css/custom.css">
 
 
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "light";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../../toc.js"></script>
     </head>
     <body>
     <div id="body-container">
@@ -91,7 +90,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -125,11 +124,14 @@
                     <h1 class="menu-title">ReadStor</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
+                        </a>
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/intro/options/preprocess.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
                     </div>
@@ -157,14 +159,57 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="pre-process"><a class="header" href="#pre-process">Pre-process</a></h1>
+<p>The following options affect only the <a href="/intro/commands.html#render"><code>render</code></a> and <a href="/intro/commands.html#export"><code>export</code></a> commands.</p>
+<h2 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h2>
+<p>Extract <code>#tags</code> from <a href="/templates/context-reference/annotation.html"><code>annotation.notes</code></a>.</p>
+<p>All matches are removed from <a href="/templates/context-reference/annotation.html"><code>annotation.notes</code></a> and placed into
+<a href="/templates/context-reference/annotation.html"><code>annotation.tags</code></a>. Additionally, all <code>#tags</code> within a book are compiled and placed
+them into <a href="/templates/context-reference/book.html"><code>book.tags</code></a>.</p>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Tags <em>must</em> start with a hash symbol <code>#</code> followed by a
+letter <code>[a-zA-Z]</code>.</p>
+</blockquote>
+<h2 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h2>
+<p>Normalize whitespace in <a href="/templates/context-reference/annotation.html"><code>annotation.body</code></a>.</p>
+<p>Trims whitespace and replaces all line-breaks with two consecutive line-breaks: <code>\n\n</code>.</p>
+<h2 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h2>
+<p>Convert all Unicode characters to ASCII.</p>
+<p>All Unicode characters found in <a href="/templates/context-reference/book.html"><code>book.title</code></a>, <a href="/templates/context-reference/book.html"><code>book.author</code></a> and
+<a href="/templates/context-reference/annotation.html"><code>annotation.body</code></a> are converted to ASCII.</p>
+<h2 id="--ascii-symbols"><a class="header" href="#--ascii-symbols"><code>--ascii-symbols</code></a></h2>
+<p>Convert "smart" Unicode symbols to ASCII.</p>
+<p>"Smart" Unicode symbols found in <a href="/templates/context-reference/book.html"><code>book.title</code></a>, <a href="/templates/context-reference/book.html"><code>book.author</code></a> and
+<a href="/templates/context-reference/annotation.html"><code>annotation.body</code></a> are converted to ASCII.</p>
+<div class="table-wrapper"><table><thead><tr><th>Character</th><th style="text-align: center">Unicode</th><th style="text-align: center">Unicode Number</th><th style="text-align: center">ASCII</th></tr></thead><tbody>
+<tr><td>Left Single Quotation Mark</td><td style="text-align: center">‘</td><td style="text-align: center">U+2018</td><td style="text-align: center">'</td></tr>
+<tr><td>Right Single Quotation Mark</td><td style="text-align: center">’</td><td style="text-align: center">U+2019</td><td style="text-align: center">'</td></tr>
+<tr><td>Left Double Quotation Mark</td><td style="text-align: center">“</td><td style="text-align: center">U+201C</td><td style="text-align: center">"</td></tr>
+<tr><td>Right Double Quotation Mark</td><td style="text-align: center">”</td><td style="text-align: center">U+201D</td><td style="text-align: center">"</td></tr>
+<tr><td>Right-Pointing Double Angle Quotation Mark</td><td style="text-align: center">»</td><td style="text-align: center">U+00BB</td><td style="text-align: center">&lt;&lt;</td></tr>
+<tr><td>Left-Pointing Double Angle Quotation Mark</td><td style="text-align: center">«</td><td style="text-align: center">U+00AB</td><td style="text-align: center">&gt;&gt;</td></tr>
+<tr><td>Horizontal Ellipsis</td><td style="text-align: center">…</td><td style="text-align: center">U+2026</td><td style="text-align: center">...</td></tr>
+<tr><td>En Dash</td><td style="text-align: center">–</td><td style="text-align: center">U+2013</td><td style="text-align: center">--</td></tr>
+<tr><td>Em Dash</td><td style="text-align: center">—</td><td style="text-align: center">U+2014</td><td style="text-align: center">---</td></tr>
+</tbody></table>
+</div>
+<p>Characters and transliterations taken from:</p>
+<ul>
+<li><a href="https://daringfireball.net/projects/smartypants/">Daring Fireball - SmartyPants</a></li>
+<li><a href="https://python-markdown.github.io/extensions/smarty/">Python-Markdown - SmartyPants</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../intro/options/filter.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../intro/options/postprocess.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -172,7 +217,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../intro/options/filter.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../intro/options/postprocess.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -185,13 +236,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
