deploy: c4011a5d450be0728d793d801755edfc362bf873

--- a/dev/intro/options/preprocess.html
+++ b/dev/intro/options/preprocess.html
@@ -164,8 +164,7 @@
 <h2 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h2>
 <p>Extract <code>#tags</code> from <a href="/templates/context-reference/annotation.html"><code>annotation.notes</code></a>.</p>
 <p>All matches are removed from <a href="/templates/context-reference/annotation.html"><code>annotation.notes</code></a> and placed into
-<a href="/templates/context-reference/annotation.html"><code>annotation.tags</code></a>. Additionally, all <code>#tags</code> within a book are compiled and placed
-them into <a href="/templates/context-reference/book.html"><code>book.tags</code></a>.</p>
+<a href="/templates/context-reference/annotation.html"><code>annotation.tags</code></a>.</p>
 <blockquote>
 <p><i class="fa fa-exclamation-circle"></i> Tags <em>must</em> start with a hash symbol <code>#</code> followed by a
 letter <code>[a-zA-Z]</code>.</p>
